[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/utilities/spawn_enemies/EnemiesSpawner.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.7, 0.9, 4.2 )

[node name="EnemiesSpawner" type="Spatial"]
script = ExtResource( 1 )

[node name="ActiveArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AreaShape" type="CollisionShape" parent="ActiveArea"]
shape = SubResource( 1 )

[node name="SpawnerPositions" type="Spatial" parent="."]

[connection signal="body_entered" from="ActiveArea" to="." method="_on_ActiveArea_body_entered"]
